[package]
name = "vault"
version = "0.0.1"
authors = ["sss"]
description = "Aptos Vault"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
ed25519-dalek = { version = "0.1.0", package = "ed25519-dalek-fiat", default-features = false, features = ["std", "serde", "fiat_u64_backend"] }
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }
hex = "0.4.3"
serde_json = "1.0.82"

